@@ -2,7 +2,7 @@
 ##############                    To Do                                  ##############
 #######################################################################################
 
-Draggable icons should disappear on simulation reset or when removed from edit dialog
+Reset all should clean up extra draggable icons
 
 Performance: consider profiling or changing clock rate
 
