@@ -1,5 +1,6 @@
 New in 0.00.42
 Dragging an item back to the toolbox removes the item
+Fixed: Draggable icons should disappear on simulation reset or when removed from edit dialog
 
 New in 0.00.41
 Fixed image cropping and transparency
